# IdeaForge

./: .env.example  .gitignore  .mcp.json  Makefile  README.md  docker-compose.yml  run_dev.sh
.githooks/: pre-push
contracts/escrow/: aiken.toml
contracts/escrow/lib/ideaforge/: types.ak
contracts/escrow/validators/: pledge_escrow.ak
docs/: DEPLOYMENT.md
docs/architecture/: api_design.md  blockchain_integration.md  database_schema.md  mvp_architecture.md  simplex_messaging_spike.md  system_overview.md  tech_decisions.md
docs/plans/2026-04-16-nda-encryption-brainstorm/: consensus.md  engineering.md  intel.md  privacy.md
docs/security/: bot_transparency.md  ip_protection.md  security_framework.md
src/: Cargo.toml  bugs.md
src/crates/ideaforge-api/: Cargo.toml
src/crates/ideaforge-api/src/: config.rs  extractors.rs  lib.rs  main.rs  middleware.rs  router.rs  state.rs
src/crates/ideaforge-api/src/handlers/: agents.rs  auth.rs  board.rs  bots.rs  bugs.rs  categories.rs  flags.rs  health.rs  ideas.rs  invites.rs  mls.rs  mls_keystore.rs  mod.rs  nda.rs  notifications.rs  search.rs  skills.rs  subscriptions.rs  team.rs  users.rs
src/crates/ideaforge-auth/: Cargo.toml
src/crates/ideaforge-auth/src/: jwt.rs  lib.rs  mfa.rs  password.rs  permissions.rs
src/crates/ideaforge-blockchain/: Cargo.toml
src/crates/ideaforge-blockchain/src/: blockfrost.rs  lib.rs  pledge.rs  types.rs
src/crates/ideaforge-core/: Cargo.toml
src/crates/ideaforge-core/src/: error.rs  lib.rs
src/crates/ideaforge-core/src/domain/: agent.rs  category.rs  contribution.rs  idea.rs  mod.rs  notification.rs  pledge.rs  team.rs  todo.rs  user.rs
src/crates/ideaforge-db/: Cargo.toml
src/crates/ideaforge-db/src/: lib.rs  seed.rs
src/crates/ideaforge-db/src/entities/: board_task.rs  bot_endorsement.rs  category.rs  contribution.rs  enums.rs  flag.rs  idea.rs  invite_link.rs  mls_group.rs  mls_group_member.rs  mls_keypackage.rs  mls_keystore.rs  mls_message.rs  mls_welcome.rs  mod.rs  nda_signature.rs  nda_template.rs  notification.rs  stoke.rs  subscription.rs  team_application.rs  team_member.rs  todo.rs  user.rs
src/crates/ideaforge-db/src/migrations/: m20260211_000001_create_users.rs  m20260211_000002_create_categories.rs  m20260211_000003_create_ideas.rs  m20260211_000004_create_stokes.rs  m20260211_000005_create_contributions.rs  m20260212_000001_create_team_members.rs  m20260212_000002_create_team_applications.rs  m20260212_000003_create_subscriptions.rs  m20260212_100001_phase2_extensions.rs  m20260325_000001_nda_system.rs  m20260325_000002_task_boards_and_team_labels.rs  m20260325_000003_task_budget.rs  m20260414_000001_idea_lifecycle.rs  m20260414_000002_mls_messaging.rs  m20260414_000003_mls_keystore.rs  m20260414_000004_message_notification.rs  m20260414_000005_notification_related_user.rs  m20260416_000001_profile_locations_education.rs  mod.rs
src/crates/ideaforge-db/src/repositories/: board_task_repo.rs  bot_endorsement_repo.rs  category_repo.rs  contribution_repo.rs  flag_repo.rs  idea_repo.rs  invite_link_repo.rs  mod.rs  nda_repo.rs  notification_repo.rs  pledge_repo.rs  stoke_repo.rs  subscription_repo.rs  team_repo.rs  user_repo.rs
src/crates/ideaforge-events/: Cargo.toml
src/crates/ideaforge-events/src/: lib.rs
src/crates/ideaforge-frontend/: Cargo.toml  Trunk.toml  index.html
src/crates/ideaforge-frontend/scripts/: emit-hashes.sh
src/crates/ideaforge-frontend/src/: lib.rs  main.rs
src/crates/ideaforge-frontend/src/api/: auth.rs  board.rs  bots.rs  categories.rs  client.rs  contributions.rs  ideas.rs  mod.rs  nda.rs  notifications.rs  stokes.rs  subscriptions.rs  team.rs  types.rs  users.rs
src/crates/ideaforge-frontend/src/components/: avatar_cropper.rs  avatar_uploader.rs  bot_section.rs  bug_report.rs  category_badge.rs  comment_section.rs  error_display.rs  forge_logo.rs  idea_card.rs  integrity_check.rs  keystore_gate.rs  loading.rs  markdown.rs  markdown_editor.rs  maturity_badge.rs  message_privately_button.rs  messaging_welcome.rs  mod.rs  nda_wall.rs  notification_bell.rs  onboarding_checklist.rs  pagination.rs  protected.rs  share_buttons.rs  stoke_button.rs  subscribe_button.rs  suggestion_section.rs  task_board.rs  team_panel.rs  visibility_badge.rs
src/crates/ideaforge-frontend/src/components/layout/: footer.rs  navbar.rs
src/crates/ideaforge-frontend/src/mls/: api.rs  client.rs  crypto.rs  keystore.rs  mod.rs
src/crates/ideaforge-frontend/src/pages/: about.rs  auth.rs  browse.rs  create_idea.rs  dashboard.rs  home.rs  how_it_works.rs  idea_detail.rs  messages.rs  mod.rs  not_found.rs  notifications.rs  people.rs  profile.rs  settings.rs
src/crates/ideaforge-frontend/src/state/: auth.rs  mls_state.rs  mod.rs
src/crates/ideaforge-frontend/style/: main.css
src/crates/ideaforge-payments/: Cargo.toml
src/crates/ideaforge-payments/src/: lib.rs
src/crates/ideaforge-search/: Cargo.toml
src/crates/ideaforge-search/src/: lib.rs
tests/: test_api.sh
