[workspace]
resolver = "2"
members = [
    "crates/ideaforge-core",
    "crates/ideaforge-db",
    "crates/ideaforge-api",
    "crates/ideaforge-auth",
    "crates/ideaforge-search",
    "crates/ideaforge-blockchain",
    "crates/ideaforge-payments",
    "crates/ideaforge-events",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ideaforge/ideaforge"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-migration = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Common
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
config = "0.14"

# Internal crates
ideaforge-core = { path = "crates/ideaforge-core" }
ideaforge-db = { path = "crates/ideaforge-db" }
ideaforge-api = { path = "crates/ideaforge-api" }
ideaforge-auth = { path = "crates/ideaforge-auth" }
ideaforge-search = { path = "crates/ideaforge-search" }
ideaforge-blockchain = { path = "crates/ideaforge-blockchain" }
ideaforge-payments = { path = "crates/ideaforge-payments" }
ideaforge-events = { path = "crates/ideaforge-events" }
