[workspace]
resolver = "2"
members = [
    "crates/ideaforge-core",
    "crates/ideaforge-db",
    "crates/ideaforge-api",
    "crates/ideaforge-auth",
    "crates/ideaforge-search",
    "crates/ideaforge-blockchain",
    "crates/ideaforge-payments",
    "crates/ideaforge-events",
    "crates/ideaforge-frontend",
]
default-members = [
    "crates/ideaforge-core",
    "crates/ideaforge-db",
    "crates/ideaforge-api",
    "crates/ideaforge-auth",
    "crates/ideaforge-search",
    "crates/ideaforge-blockchain",
    "crates/ideaforge-payments",
    "crates/ideaforge-events",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ideaforge/ideaforge"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "set-header", "request-id", "propagate-header", "fs"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
http = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-migration = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Common
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
config = "0.14"
dotenvy = "0.15"
validator = { version = "0.19", features = ["derive"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }

# Internal crates
ideaforge-core = { path = "crates/ideaforge-core" }
ideaforge-db = { path = "crates/ideaforge-db" }
ideaforge-api = { path = "crates/ideaforge-api" }
ideaforge-auth = { path = "crates/ideaforge-auth" }
ideaforge-search = { path = "crates/ideaforge-search" }
ideaforge-blockchain = { path = "crates/ideaforge-blockchain" }
ideaforge-payments = { path = "crates/ideaforge-payments" }
ideaforge-events = { path = "crates/ideaforge-events" }
