[package]
name = "ideaforge-api"
description = "Axum HTTP API server for IdeaForge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ideaforge"
path = "src/main.rs"

[[bin]]
name = "mls-smoketest"
path = "src/bin/mls_smoketest.rs"

[dependencies]
# MVP crates
ideaforge-core = { workspace = true }
ideaforge-db = { workspace = true }
ideaforge-auth = { workspace = true }
ideaforge-search = { workspace = true }

# Deferred crates (Phase 2+) -- NOT dependencies of the API at MVP
# ideaforge-blockchain = { workspace = true }  # Phase 2-3: Cardano pledges
# ideaforge-events = { workspace = true }      # Phase 2+: NATS event bus
# ideaforge-payments = { workspace = true }    # Phase 2: Stripe

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Common
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
validator = { workspace = true }
axum-extra = { workspace = true }
http = { workspace = true }
sea-orm = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

# Smoke-test binary only (not used by the API server).
reqwest = { workspace = true }
openmls = "0.8"
openmls_traits = "0.5"
openmls_rust_crypto = "0.5"
openmls_basic_credential = "0.5"
