[package]
name = "ideaforge-blockchain"
description = "Cardano blockchain integration for IdeaForge pledges"
version.workspace = true
edition.workspace = true

[dependencies]
ideaforge-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
