[package]
name = "ideaforge-db"
description = "Database entities, migrations, and repositories for IdeaForge"
version.workspace = true
edition.workspace = true

[dependencies]
ideaforge-core = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
