[package]
name = "ideaforge-db"
description = "Database entities, migrations, and repositories for IdeaForge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
ideaforge-core = { workspace = true }
ideaforge-auth = { workspace = true }
async-trait = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
