[package]
name = "ideaforge-frontend"
description = "Leptos CSR frontend for IdeaForge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
gloo-net = { version = "0.6", features = ["http", "json"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Storage",
    "Navigator",
    "Clipboard",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "HtmlMetaElement",
    "HtmlHeadElement",
    "Event",
    "SubmitEvent",
    "MouseEvent",
    "Document",
    "console",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
