[package]
name = "ideaforge-payments"
description = "Fiat payment processing for IdeaForge (Stripe subscriptions, fiat on-ramp)"
version.workspace = true
edition.workspace = true

[dependencies]
ideaforge-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
